[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/core/Dungeon.gd" type="Script" id=1]
[ext_resource path="res://assets/images/bgs/forest.png" type="Texture" id=2]
[ext_resource path="res://src/core/MapNode.gd" type="Script" id=3]
[ext_resource path="res://assets/images/map/player.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "animate"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 0 ]
}

[node name="Dungeon" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 108.0
margin_bottom = 192.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DungeonImageBG" type="ColorRect" parent="ColorRect"]
margin_right = 108.0
margin_bottom = 52.0
color = Color( 0.145098, 0.145098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocationSprite" type="Sprite" parent="ColorRect"]
position = Vector2( 54, 29 )
texture = ExtResource( 2 )
vframes = 7
frame = 6

[node name="TopBanner" type="ColorRect" parent="ColorRect"]
anchor_right = 1.0
margin_bottom = 9.0
color = Color( 0.145098, 0.145098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorNum" type="Label" parent="ColorRect/TopBanner"]
anchor_right = 1.0
margin_left = -1.0
margin_top = -3.0
margin_right = -1.0
margin_bottom = 11.0
text = "Dark Forest Lv. 3"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Node2D" parent="ColorRect"]
position = Vector2( 9, 61 )
script = ExtResource( 3 )

[node name="Branches" type="Node2D" parent="ColorRect/Map"]

[node name="Squares" type="Node2D" parent="ColorRect/Map"]

[node name="Avatar" type="Sprite" parent="ColorRect/Map"]
position = Vector2( -8, -8 )
texture = ExtResource( 4 )
centered = false
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/Map/Avatar"]
autoplay = "animate"
anims/animate = SubResource( 1 )

[node name="Tween" type="Tween" parent="ColorRect/Map/Avatar"]

[node name="Tooltip" type="Panel" parent="ColorRect"]
visible = false
anchor_right = 0.611
anchor_bottom = 0.068
margin_right = -26.988
margin_bottom = -2.056
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/Tooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_right = 1.0
margin_bottom = 1.0
text = "Treasure"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="hide_tooltip" from="ColorRect/Map" to="." method="_on_Map_hide_tooltip"]
[connection signal="move_to_square" from="ColorRect/Map" to="." method="_on_Map_move_to_square"]
[connection signal="show_tooltip" from="ColorRect/Map" to="." method="_on_Map_show_tooltip"]
